Fix height and wrapping issues by using flexbox inside of flex navbar

--- a/docs/stylesheets/mindsmash-ui.css
+++ b/docs/stylesheets/mindsmash-ui.css
@@ -3574,19 +3574,21 @@ body > .ui-select-bootstrap.open { z-index: 2000 !important; }
 
 .msm-navbar-flex.nav-search-open .nav-brand { top: -60px; }
 
-.msm-navbar-flex .nav > .nav-item { cursor: pointer; float: left; }
+.msm-navbar-flex .nav { display: flex; height: 100%; }
 
-.msm-navbar-flex .nav > .nav-item .nav-item-icon { font-size: 20px; font-weight: 600; padding: 20px 15px; }
+.msm-navbar-flex .nav .nav-item { cursor: pointer; height: 100%; }
 
-@media screen and (max-width: 767px) { .msm-navbar-flex .nav > .nav-item .nav-item-icon { padding-top: 16px; padding-bottom: 16px; font-size: 18px; } }
+.msm-navbar-flex .nav .nav-item .nav-item-icon { font-size: 20px; font-weight: 600; padding: 20px 15px; }
 
-@media screen and (min-width: 992px) { .msm-navbar-flex .nav > .nav-item .nav-item-icon { padding-left: 20px; padding-right: 20px; } }
+@media screen and (max-width: 767px) { .msm-navbar-flex .nav .nav-item .nav-item-icon { padding-top: 16px; padding-bottom: 16px; font-size: 18px; } }
 
-.msm-navbar-flex .nav > .nav-item .nav-item-profile { padding-top: 16px; padding-bottom: 14px; height: 60px; }
+@media screen and (min-width: 992px) { .msm-navbar-flex .nav .nav-item .nav-item-icon { padding-left: 20px; padding-right: 20px; } }
 
-.msm-navbar-flex .nav > .nav-item .nav-item-profile .profile-thumb { background: #FDFDFD; border-radius: 26px; float: left; height: 30px; width: 30px; }
+.msm-navbar-flex .nav .nav-item .nav-item-profile { padding-top: 16px; padding-bottom: 14px; }
 
-.msm-navbar-flex .nav > .nav-item .nav-item-profile > i { display: inline-block; float: left; font-size: 24px; margin-left: 10px; margin-top: 4px; }
+.msm-navbar-flex .nav .nav-item .nav-item-profile .profile-thumb { background: #FDFDFD; border-radius: 26px; float: left; height: 30px; width: 30px; }
+
+.msm-navbar-flex .nav .nav-item .nav-item-profile > i { display: inline-block; float: left; font-size: 24px; margin-left: 10px; margin-top: 4px; }
 
 .msm-navbar-flex .nav-brand-box { display: block; height: 100%; left: calc(50% - 120px); overflow: hidden; position: absolute; top: 0; transition: all ease-in-out .15s; width: 240px; z-index: 2; }
 
